--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <header>
       <div class="row">
         <div class="logo">
-          <img src="/Logo.gif" alt="Logo" />
+          <img src="./src/fundo.jpg" alt="Logo" />
         </div>
 
         <ul class="main-nav">
