--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
     <header>
       <div class="row">
         <div class="logo">
-          <img src="./src/fundo.jpg" alt="Logo" />
+          <img src="https://github.com/Lucas-Henrique-Lopes-Costa/Site-de-Negocios/blob/299b985383bb4e40ee6774d40dc45b2e89aee2e6/src/Logo.gif?raw=true" alt="Logo" />
+          
         </div>
 
         <ul class="main-nav">
