--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <ul class="main-nav">
           <li><a href="" class="active"> HOME </a></li>
-          <li><a href="" class="hover"> SERVIÇOS </a></li>
+          <li><a href="./services.html" class="hover"> SERVIÇOS </a></li>
           <li><a href="" class="hover"> ABOUT </a></li>
           <li><a href="" class="hover"> CONTATO </a></li>
           <li><a href="" class="hover"> NOTÍCIAS </a></li>
